# NumericalIntegration

./: .gitignore  CMakeLists.txt  README.md
Tests/: CMakeLists.txt  Test.cpp
src/: CMakeLists.txt  NumericalIntegration.hpp  NumericalIntegration_template.hpp
